2013-06-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.9.0 beta release.

	* src/pj_fileapi.c, etc: Implement a virtual file api accessable
	through the context for init file and grid shift file access.

	* src/mk_cheby.c: reformat, add braces to avoid warnings.

2013-06-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: correct various warnings about unused variables.

2013-06-19  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_mutex.c, configure.in: Ensure that the core mutex lock
	is created in recursive mode.  Results in -lpthread being required.

2013-06-18  Frank Warmerdam  <warmerdam@google.com>

	* src/PJ_healpix.c: rename sign() to pj_sign() and make it static.  No
	need to risk conflicting with sign() in other packages like gctpc.

2012-12-17  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: Recover gracefully if setlocale() returns NULL
	like on Android (#204).

2012-12-07  Frank Warmerdam  <warmerdam@pobox.com>

	* src/geod*: Replace geodesic implementation with one from
	Charles Karney, add public interface (#197).

2012-12-05  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgraded to EPSG 8.0.

2012-07-24  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridcatalog.c, src/makefile.vc: fixes for visual studio
	builds (#182).

2012-07-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_healpix.c: Incorporate a polar fix (#176).

2012-06-27  Frank Warmerdam  <warmerdam@pobox.com>

	* src/nad2bin.c: Fix byte swapping for bigendian platforms (#157)

2012-06-07  Frank Warmerdam  <warmerdam@google.com>

	* src/pj_init.c: avoid leaking vgridlist_geoid (#175).

2012-06-01  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

	* Removed the old JNI wrappers from trunk. Those wrappers are
	still present on the 4.8 branch as deprecated classes.

2012-05-31  Martin Desruisseaux <martin.desruisseaux@geomatys.fr>

	* Replaced usages of NAN C/C++ constant by the java.lang.Double.NaN 